Create a generate template haskell function for BlackBoxFunction of Clash

--- a/ClashFloPoCo.cabal
+++ b/ClashFloPoCo.cabal
@@ -144,7 +144,8 @@ library
     exposed-modules:  FloPoCoCall,
         Lexer,
         FlopoCo,
-        Help
+        Help,
+        Tem
 
 
     -- Modules included in this library but not exported.
