Add fma and exp

--- a/ClashFloPoCo.cabal
+++ b/ClashFloPoCo.cabal
@@ -155,7 +155,7 @@ library
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.19.1.0
+    build-depends:    base >=4.19.1.0
 
     -- Directories containing source files.
     hs-source-dirs:   src
@@ -179,7 +179,7 @@ executable clash
 
     -- Other library packages from which modules are imported.
     build-depends:
-        base ^>=4.19.1.0,
+        base >=4.19.1.0,
         clash-ghc,
         ClashFloPoCo
 
@@ -204,7 +204,7 @@ executable clashi
 
     -- Other library packages from which modules are imported.
     build-depends:
-        base ^>=4.19.1.0,
+        base >=4.19.1.0,
         clash-ghc,
         ClashFloPoCo
 
@@ -239,5 +239,5 @@ test-suite ClashFloPoCo-test
 
     -- Test dependencies.
     build-depends:
-        base ^>=4.19.1.0,
+        base >=4.19.1.0,
         ClashFloPoCo
