Add haddock for Lexer

--- a/ClashFloPoCo.cabal
+++ b/ClashFloPoCo.cabal
@@ -145,7 +145,8 @@ library
         Lexer,
         FlopoCo,
         Help,
-        Tem
+        Tem,
+        InfoEn
 
 
     -- Modules included in this library but not exported.
